@@ -30,6 +30,9 @@ void save_oct_double (char *filename, double *input, int in_len, double *output,
 void interleave_data (const float *in, float *out, int frames, int channels) ;
 
 void deinterleave_data (const float *in, float *out, int frames, int channels) ;
+
+void reverse_data (float *data, int datalen) ;
+
 /*
 ** Do not edit or modify anything in this comment block.
 ** The arch-tag line is a file identity tag for the GNU Arch 
